--- a/deploy/conf/nginx/conf.d/geekai.conf
+++ b/deploy/conf/nginx/conf.d/geekai.conf
@@ -14,7 +14,7 @@ server {
 
     # 默认路径的 root
     location / {
-        root /var/www/tailapp/dist;
+        root /var/www/app/taildist;
 
         try_files $uri $uri/ /index.html;
 
@@ -40,9 +40,9 @@ server {
 
     # /admin 路径的 root
     location /admin {
-        root /var/www/app/dist;
+        alias /var/www/app/dist;
 
-        try_files $uri $uri/ /admin/index.html;
+        try_files $uri $uri/ /index.html;
     }
 }
 
