--- a/deploy/conf/nginx/nginx.conf
+++ b/deploy/conf/nginx/nginx.conf
@@ -13,11 +13,10 @@ http {
 	##
 	# Basic Settings
 	##
-
 	sendfile on;
 	tcp_nopush on;
 	types_hash_max_size 2048;
-	# server_tokens off;
+	server_tokens off;
 	 client_max_body_size 100M;
 
 	# server_names_hash_bucket_size 64;
