--- a/deploy/conf/nginx/conf.d/tailweb.conf
+++ b/deploy/conf/nginx/conf.d/tailweb.conf
@@ -4,7 +4,7 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-    listen 8080;
+    listen 9090;
 
     # 日志地址
     access_log  /var/log/access.log;
@@ -14,11 +14,21 @@ server {
 
     # 默认路径的 root
     location / {
-        root /var/www/app/dist;
+        root /var/www/app/taildist;
 
         try_files $uri $uri/ /index.html;
 
-        # 后端 API 的转发
+        
+
+        # 静态资源转发
+    
+    }
+
+    location /static/ {
+            proxy_pass http://geekai-api:5678;
+        }
+
+# 后端 API 的转发
         location /api/ {
             proxy_http_version 1.1;
             proxy_connect_timeout 300s;
@@ -31,11 +41,5 @@ server {
             proxy_set_header Connection $connection_upgrade;
             proxy_pass http://geekai-api:5678;
         }
-
-        # 静态资源转发
-        location /static/ {
-            proxy_pass http://geekai-api:5678;
-        }
-    }
 }
 
